--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 #header {
     display: flex;
     flex-direction: left;
-    background-image: url("../images/nugs.jpg");
+    background-image: url("../images/Nugs.jpg");
     background-size: 100%;
     padding-bottom: 20px;
 }
